Commit next 12 lessons

--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,28 @@ li {
 .error {
   color: red;
 }
+
+.success {
+  color: green;
+}
+
+li span.delete-item {
+  visibility: hidden;
+}
+span.delete-item a {
+  text-decoration: none;
+  color: red;
+}
+
+li:hover span.delete-item {
+  visibility: visible;
+}
+
+.Footer a {
+  padding-left:2px;
+  padding-right:2px;
+}
+
+.Footer a.active {
+  font-weight: bold;
+}
